[tool.poetry]
name = "reloader.py"
version = "0.15.1"
description = "A simple script reloader"
license = "MIT"
authors = ["EcmaXp <ecmaxp@ecmaxp.kr>"]
repository = "https://github.com/EcmaXp/reloader.py"
packages = [{ include = "reloader.py" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.10"
watchdog = "^5.0.0"

[tool.poetry.scripts]
"reloader" = "reloader:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
