[project]
name = "reloader.py"
version = "0.16.1"
description = "A simple script reloader"
license = "MIT"
authors = [{ name = "EcmaXp", email = "ecmaxp@ecmaxp.kr" }]
requires-python = ">=3.10"
dependencies = ["watchdog>=5.0.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/EcmaXp/reloader.py"

[project.scripts]
"reloader" = "reloader:main"
"reloader-py" = "reloader:main"
"reloader.py" = "reloader:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reloader.py"]

[tool.hatch.build.targets.sdist]
packages = ["reloader.py"]
